Fix: some issues in delete product api
